Added swagger ui for customer apis, updated unittest
